# assess_complexity

./: README.md  pyproject.toml  run_example.py
.github/workflows/: ci.yml  python-publish.yml  workflow.yml
assess_complexity/: __init__.py  analyzer.py  cli.py
assess_complexity.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: example2.c  input.txt  sample.c
tests/: test_analyzer.py
